// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`it should render label when label is passed 1`] = `
.c0 {
  display: block;
}

<span
  className="c0"
>
  label: 0
</span>
`;

exports[`should render no label when no label passed 1`] = `
.c0 {
  display: block;
}

<span
  className="c0"
>
  0
</span>
`;
